--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
       <i class="ph-phone-call"></i>Contact Us
     </a>
    
+    <a class="tile" href="patient .html">
+      <i class="ph-phone-call"></i>Notifications
+    </a>
+    <a class="tile" href="check.html">
+      <i class="ph-phone-call"></i>Check
+    </a>
+    <a class="tile" href="doctor.html">
+      <i class="ph-phone-call"></i>Doctor
+    </a>
+    
+   
    
   </section>
 
