--- a/home.html
+++ b/home.html
@@ -18,11 +18,13 @@
     <nav>
         <nav class="main-nav">
             <li><a href="home.html">Home</a></li>
-            <li><a href="appointment.html">Book Appointment</a></li>
             <li><a href="soryboard.html">Storyboard</a></li>
+            <li><a href="appointment.html">Book Appointment</a></li>
             <li><a href="problem.html">Problem</a></li>
             <li><a href="elevator.html">Elevator</a></li>
             <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="index.html" class="active">First Pages</a></li>
+
       <a href="LOGIN.HTML" class="btn‑ghost">Login</a>
       <a href="SIGNUP.HTML" class="btn">Sign up</a>
     </nav>
