--- a/LOGIN.HTML
+++ b/LOGIN.HTML
@@ -29,7 +29,7 @@
 
     <p class="switch">
       New here?
-      <a href="signup.html">Create an account →</a>
+      <a href="SIGNUP.HTML">Create an account →</a>
     </p>
   </main>
 
