--- a/SIGNUP.HTML
+++ b/SIGNUP.HTML
@@ -33,7 +33,7 @@
 
     <p class="switch">
       Already have an account?
-      <a href="login.html">Sign in →</a>
+      <a href="LOGIN.HTML">Sign in →</a>
     </p>
   </main>
 
