--- a/soryboard.html
+++ b/soryboard.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="home.html">Home</a></li>
         <li><a class="active" href="storyboard.html">Storyboard</a></li>
-        <li><a href="appointment.html">Book</a></li>
+        <li><a href="problem.html">Problem</a></li>
         <li><a href="elevator.html">Elevator Pitch</a></li>
         <li><a href="index.html" class="active">First Pages</a></li>
 
