--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
       <p class="sub">Book appointments, skip the queue, and get real‑time updates — all from your phone.</p>
       <div class="cta">
         <a href="appointment.html" class="btn lg">Booking</a>
-        <a href="LOGIN.HTML" class="btn‑ghost lg">I already have an account</a>
+        <a href="problem.html" class="btn‑ghost lg">Problem</a>
       </div>
     </section>
   </main>
