--- a/doctor.html
+++ b/doctor.html
@@ -69,7 +69,7 @@
         // Function to simulate the exit process
         function exitPage() {
             alert('Thank you for visiting! You have exited the system.');
-            window.location.href = 'home.html'; // Redirecting to Home Page
+            window.location.href = 'index.html'; // Redirecting to Home Page
         }
     </script>
 </body>
