--- a/problem.html
+++ b/problem.html
@@ -16,7 +16,8 @@
     <nav>
       <a href="home.html">Home</a>
       <a href="problem.html" class="active">Problem</a>
-      <a href="contact.html">Contact</a>
+      <a href="soryboard.html">Storyboard</a>
+      <a href="elevator.html">Elevator</a>
       <li><a href="index.html" class="active">First Pages</a></li>
 
     </nav>
